--- a/scss/components/_videos.scss
+++ b/scss/components/_videos.scss
@@ -1,3 +1,7 @@
 .highlight-videos {
-    margin: em(48) auto;
+	margin: em(48) auto;
+}
+
+.highlight-videos iframe {
+	max-width: 100%;
 }
